--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node -v && node ./index.js",
+    "dev": "node -r dotenv/config ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,10 @@
   },
   "homepage": "https://github.com/abiriadev/denesor-cc-3.0#readme",
   "dependencies": {
+    "discord.js": "^13.1.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0"
   }
 }
