--- a/.github/workflows/main_abiria-denesor-cc-3.yml
+++ b/.github/workflows/main_abiria-denesor-cc-3.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: '14.x'
+          node-version: '16.8.0'
 
       - name: npm install, build, and test
         run: |
