--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node -v && node ./index.js",
     "dev": "node -r dotenv/config ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node -v"
   },
   "repository": {
     "type": "git",
